switch to dynamodb

--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -27,7 +27,7 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="{{ url_for('do sth here ') }}" style="padding-right: 3rem">Do sth here??</a>
+{#              <a class="nav-item nav-link" href="{{ url_for('') }}" style="padding-right: 3rem">Do sth here??</a>#}
               <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
             </div>
           </div>
