config with zappa

--- a/webapp/templates/login.html
+++ b/webapp/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="spacer-80"></div>
     <div class="content-section">
-        <form method="POST" action="/login">
+        <form method="POST" action="">
             {{ form.csrf_token }}
 {#            {{ form.hidden_tag() }}#}
             <fieldset class="form-group">
