--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -29,6 +29,7 @@
             <div class="navbar-nav">
 {#              <a class="nav-item nav-link" href="{{ url_for('') }}" style="padding-right: 3rem">Do sth here??</a>#}
               <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
+              <a class="nav-item nav-link" href="{{ url_for('votes.post_vote') }}">Logout</a>
             </div>
           </div>
         </div>
