--- a/webapp/templates/votes.list.html
+++ b/webapp/templates/votes.list.html
@@ -1,6 +1,36 @@
 {% extends "layout.html" %}
 {% block content %}
       <div class="spacer-30"></div>
-      <div class="content-section">
-      </div>
+      <section>
+          <div class="row">
+              <div class="col-md-6 align-center">
+                  <a class="btn btn-lg btn-dark-blue" style="width: 50%" href="/listallvotes">
+                        <span>All Votes</span>
+                  </a>
+              </div>
+                {% if (login) %}
+                  <div class="col-md-6 align-center">
+                  <a id="growlink" class="btn btn-lg btn-dark-blue" style="width: 50%" href="/listmyvotes">
+                        <span>My Votes</span>
+                  </a>
+                  </div>
+                {% endif %}
+          </div>
+            <div class="spacer-30"></div>
+      {% if votes|length > 0 %}
+            <div class="container bg-white shadow rounded-lg" style="opacity: 0.92">
+                  <ul>
+                  {% for vote in votes %}
+                  <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
+                        <a class="align-center" href="url for voting it with vote['id']">
+                              <li><h4>{{vote["topic"]}}</h4></li>
+                        </a>
+                  </div>
+                  {% endfor %}
+                  </ul>
+            </div>
+      {% else %}
+            <h1 class="mb-4">No votes available! Start posting now! </h1>
+      {% endif %}
+    </section>
 {% endblock content %}
