写完辽，辣鸡UI还没更新

--- a/webapp/templates/myvotes.html
+++ b/webapp/templates/myvotes.html
@@ -23,7 +23,7 @@
                   <ul>
                   {% for vote in votesPosted %}
                   <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
-                        <a class="align-center" href="url for voting it">
+                        <a class="align-center" href="{{url_for('votes.vote_details',voteID=vote["id"], vote_create_time=vote["create_time"])}}">
                               <li><h4>{{vote["topic"]}}</h4></li>
                         </a>
                   </div>
@@ -38,8 +38,8 @@
                   <ul>
                   {% for vote in votesVoted %}
                   <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
-                        <a class="align-center" href="url for voting it">
-                              <li><h4>{{vote["topic"]}}</h4></li>
+                        <a class="align-center" href="{{url_for('votes.vote_details',voteID=vote["id"],vote_create_time=vote["create_time"])}}">
+                              <h4>{{vote["topic"]}}</h4>
                         </a>
                   </div>
                   {% endfor %}
