--- a/webapp/templates/votes.list.html
+++ b/webapp/templates/votes.list.html
@@ -1,3 +1,72 @@
+<style>
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
+</style>
+
 {% extends "layout.html" %}
 {% block content %}
       <div class="spacer-30"></div>
@@ -22,9 +91,29 @@
                   <ul>
                   {% for vote in votes %}
                   <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
-                        <a class="align-center" href="url for voting it with vote['id']">
-                              <li><h4>{{vote["topic"]}}</h4></li>
+                        <a class="align-center" href="{{url_for('votes.vote_details',voteID=vote["id"], vote_create_time=vote["create_time"])}}">
+                              <h4>{{vote["topic"]}}</h4>
                         </a>
+{#                        <button id="myBtn">{{ vote["topic"] }}</button>#}
+{##}
+{#                            <!-- The Modal -->#}
+{#                            <div id="myModal" class="modal">#}
+{##}
+{#                            <!-- Modal content -->#}
+{#                            <div class="modal-content">#}
+{#                              <div class="modal-header">#}
+{#                                <span class="close">&times;</span>#}
+{#                                <h2>Modal Header</h2>#}
+{#                              </div>#}
+{#                              <div class="modal-body">#}
+{#                                <p>Some text in the Modal Body</p>#}
+{#                                <p>Some other text...</p>#}
+{#                              </div>#}
+{#                              <div class="modal-footer">#}
+{#                                <h3>Modal Footer</h3>#}
+{#                              </div>#}
+{#                            </div>#}
+{#                            </div>#}
                   </div>
                   {% endfor %}
                   </ul>
@@ -33,4 +122,32 @@
             <h1 class="mb-4">No votes available! Start posting now! </h1>
       {% endif %}
     </section>
+
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal
+btn.onclick = function() {
+  modal.style.display = "block";};
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";};
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target === modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
+
+
 {% endblock content %}
