--- a/webapp/templates/votes.result.html
+++ b/webapp/templates/votes.result.html
@@ -5,42 +5,40 @@
       <form method="POST" action="{{ url_for('votes.vote_details', voteID = voteID, vote_create_time=vote_create_time) }}">
                 <legend class="border-bottom mb-4">{{ topic }}</legend>
                 <div class="container bg-white shadow rounded-lg" style="opacity: 0.92">
-                    {% for option in options %}
-                  <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
-                        <label class="radio" id="option">
-                            <input type="radio" name="name" value="0" />
-                            <span>{{ option['content'] }}:{{option['counts']}}</span>
-                        </label>
+
+{#                  <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
+                <div class="progress" style="height: 40px">
+                  <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[0] }}%">
+                      {{ option1['content'] }}
                   </div>
-                    {% endfor %}
-{#                    <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
-{#                        <label class="radio" id="option">#}
-{#                            <input type="radio" name="name" value="1" />#}
-{#                            <span>{{option2}}</span>#}
-{#                        </label>#}
-{#                  </div>#}
-{#                    <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
-{#                        <label class="radio" id="option">#}
-{#                            <input type="radio" name="name" value="2" />#}
-{#                            <span>{{option3}}</span>#}
-{#                        </label>#}
-{#                  </div>#}
-{#                    {% if option4|length > 0 %}#}
-{#                    <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
-{#                        <label class="radio" id="option">#}
-{#                            <input type="radio" name="name" value="3" />#}
-{#                            <span>{{option4}}</span>#}
-{#                        </label>#}
-{#                  </div>#}
-{#                    {% endif %}#}
-{#                    {% if option5|length > 0 %}#}
-{#                    <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
-{#                        <label class="radio" id="option">#}
-{#                            <input type="radio" name="name" value="4"/>#}
-{#                            <span>{{option5}}</span>#}
-{#                        </label>#}
-{#                  </div>#}
-{#                    {% endif %}#}
+                </div>
+                <div class="progress" style="height: 40px">
+                  <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[1] }}%">
+                      {{ option2['content'] }}
+                  </div>
+                </div>
+                <div class="progress" style="height: 40px">
+                  <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[2] }}%">
+                      {{ option3['content'] }}
+                  </div>
+                </div>
+
+                    {% if option4|length > 0 %}
+                <div class="progress" style="height: 40px">
+                  <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[3] }}%">
+                      {{ option4['content'] }}
+                  </div>
+                </div>
+                    {% endif %}
+
+                    {% if option5|length > 0 %}
+                <div class="progress" style="height: 40px">
+                  <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[4] }}%">
+                      {{ option5['content'] }}
+                  </div>
+                </div>
+                    {% endif %}
+
                 </div>
             <div class="spacer-50"></div>
       </form>
