--- a/webapp/templates/votes.result.html
+++ b/webapp/templates/votes.result.html
@@ -9,32 +9,35 @@
 {#                  <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[0] }}%">
-                      {{ option1['content'] }}
+                      {{ option1['content'] }} : {{ option1['counts'] }} with {{ fractions[0] }}%
                   </div>
                 </div>
+                <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[1] }}%">
-                      {{ option2['content'] }}
+                      {{ option2['content'] }} : {{ option2['counts'] }} with {{ fractions[1] }}%
                   </div>
                 </div>
+                <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[2] }}%">
-                      {{ option3['content'] }}
+                      {{ option3['content'] }} : {{ option3['counts'] }} with {{ fractions[2] }}%
                   </div>
                 </div>
-
                     {% if option4|length > 0 %}
+                        <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[3] }}%">
-                      {{ option4['content'] }}
+                      {{ option4['content'] }} : {{ option4['counts'] }} with {{ fractions[3] }}%
                   </div>
                 </div>
                     {% endif %}
 
                     {% if option5|length > 0 %}
+                        <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[4] }}%">
-                      {{ option5['content'] }}
+                      {{ option5['content'] }}  : {{ option5['counts'] }} with {{ fractions[4] }}%
                   </div>
                 </div>
                     {% endif %}
