--- a/webapp/templates/votes.detail.html
+++ b/webapp/templates/votes.detail.html
@@ -91,8 +91,9 @@ input:checked ~ input:active {
                   </div>
                     {% endif %}
                 </div>
-                <input type="submit" name="submit" value="submit"/>
             </fieldset>
+      <br>
+          <input class="btn btn-outline-info btn-dark-blue" type="submit" name="submit" value="Submit"/>
             <div class="spacer-50"></div>
       </form>
       </div>
