--- a/webapp/templates/vote.creation.html
+++ b/webapp/templates/vote.creation.html
@@ -86,6 +86,23 @@
                     {% endif %}
                 </div>
 
+                <div class="form-group">
+                    {{ form.valid_days.label(class="form-control-label") }}
+                    {% if form.valid_days.errors %}
+                        {{ form.valid_days(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.valid_days.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.valid_days(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+              <div style="color: #9C1A1C">
+                * is required.
+              </div>
+
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info btn-dark-blue") }}
