--- a/webapp/templates/votes.detail.html
+++ b/webapp/templates/votes.detail.html
@@ -50,7 +50,7 @@ input:checked ~ input:active {
     <script src="../static/js/prefixfree.min.js"></script>
       <div class="spacer-30"></div>
       <div class="content-section">
-      <form method="POST" action="{{ url_for('votes.vote_details', voteID = voteID, vote_create_time=vote_create_time) }}">
+      <form method="POST" action="{{ url_for('votes.vote_details', vote_id = vote_id, vote_create_time=vote_create_time) }}">
             <fieldset  class="radio-check-label">
                 <legend class="border-bottom mb-4">{{ topic }}</legend>
                 <div class="container bg-white shadow rounded-lg" style="opacity: 0.92">
