--- a/webapp/templates/votes.list.html
+++ b/webapp/templates/votes.list.html
@@ -93,7 +93,7 @@
                   <ul>
                   {% for vote in hot_votes %}
                   <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
-                        <a class="align-center" href="{{url_for('votes.vote_details',voteID=vote["id"], vote_create_time=vote["create_time"])}}">
+                        <a class="align-center" href="{{url_for('votes.vote_details',vote_id=vote["id"], vote_create_time=vote["create_time"])}}">
                               <h4>{{vote["topic"]}}</h4>
                         </a>
 
@@ -110,7 +110,7 @@
                   <ul>
                   {% for vote in votes %}
                   <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
-                        <a class="align-center" href="{{url_for('votes.vote_details',voteID=vote["id"], vote_create_time=vote["create_time"])}}">
+                        <a class="align-center" href="{{url_for('votes.vote_details',vote_id=vote["id"], vote_create_time=vote["create_time"])}}">
                               <h4>{{vote["topic"]}}</h4>
                         </a>
 
