--- a/webapp/templates/votes.search.html
+++ b/webapp/templates/votes.search.html
@@ -24,8 +24,37 @@
                     {% endif %}
                 </div>
             </fieldset>
-                    <input class="btn btn-outline-info btn-dark-blue" type="submit" name="submit" value="Submit"/>
+            <input id="myInput" class="btn btn-outline-info btn-dark-blue" type="submit" name="submit" value="Submit"/>
           </form>
-      </div>
+            {% if votesPosted|length > 0 or votesVoted|length > 0%}
+            <div class="spacer-30"></div>
+            <div class="container bg-white shadow rounded-lg" style="opacity: 0.92">
+                  <ul>
+                  {% for vote in votesPosted %}
+                  <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">
+                        <a class="align-center" href="{{url_for('votes.vote_details',vote_id=vote["id"], vote_create_time=vote["create_time"])}}">
+                              <h4>{{vote["topic"]}}</h4>
+                        </a>
+                  </div>
+                  {% endfor %}
+                  </ul>
+            </div>
+          {% endif %}
 
+      </div>
+    <script>
+    // Get the input field
+    var input = document.getElementById("myInput");
+
+    // Execute a function when the user releases a key on the keyboard
+    input.addEventListener("keyup", function(event) {
+      // Number 13 is the "Enter" key on the keyboard
+      if (event.keyCode === 13) {
+        // Cancel the default action, if needed
+        event.preventDefault();
+        // Trigger the button element with a click
+        document.getElementById("myBtn").click();
+      }
+    });
+    </script>
 {% endblock %}
