--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -28,6 +28,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
 {#              <a class="nav-item nav-link" href="{{ url_for('') }}" style="padding-right: 3rem">Do sth here??</a>#}
+            <a class="nav-item nav-link" href="{{ url_for('votes.search_vote') }}">Search</a>
             <a class="nav-item nav-link" href="{{ url_for('votes.post_vote') }}">Vote</a>
             <a class="nav-item nav-link" href="{{ url_for('votes.list_my_vote') }}">My Vote</a>
             <a class="nav-item nav-link" href="{{ url_for('votes.list_vote') }}">All Vote</a>
