--- a/webapp/templates/vote.creation.html
+++ b/webapp/templates/vote.creation.html
@@ -5,7 +5,7 @@
           <form method="POST" action="">
             {{ form.csrf_token }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Post Vote</legend>
+                <legend class="border-bottom mb-4">Initiate a Vote</legend>
                 <div class="form-group">
                     {{ form.vote_topic.label(class="form-control-label") }}
                     {% if form.vote_topic.errors %}
