--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -23,7 +23,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-                <a class="nav-item nav-link" href="{{ url_for('votes.list_vote') }}">All Topics</a>
+                <a class="nav-item nav-link" href="{{ url_for('votes.list_vote') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('votes.hot_vote') }}">Hot Topics</a>
                 <a class="nav-item nav-link" href="{{ url_for('votes.list_my_vote') }}">My Topics</a>
 
