--- a/webapp/static/styles/main.css
+++ b/webapp/static/styles/main.css
@@ -4,7 +4,7 @@ body {
   margin-top: 5rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
   color: #444444;
 }
 
@@ -242,6 +242,10 @@ input:invalid+b+[type="submit"] {
 @keyframes animatetop {
   from {top: -300px; opacity: 0}
   to {top: 0; opacity: 1}
+}
+
+h4{
+  color: #5f788a !important;
 }
 
 
