--- a/webapp/templates/votes.result.html
+++ b/webapp/templates/votes.result.html
@@ -1,3 +1,11 @@
+<style>
+.right{
+    float:right;
+}
+
+.left{
+    float:left;
+}</style>
 {% extends "layout.html" %}
 {% block content %}
       <div class="spacer-30"></div>
@@ -8,44 +16,57 @@
 
 {#                  <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
                 <br>
+                <div><h6><span class="right">Votes: {{ option1['counts'] }}</span><span class="left">{{ option1['content'] }} :</span></h6></div>
+                <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[0] }}%">
-                      {{ option1['content'] }} : {{ option1['counts'] }} with {{ fractions[0] }}%
+                      {{ fractions[0] }}%
                   </div>
                 </div>
+                <br>
+                <div><h6><span class="right">Votes: {{ option2['counts'] }}</span><span class="left">{{ option2['content'] }} :</span></h6></div>
                 <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[1] }}%">
-                      {{ option2['content'] }} : {{ option2['counts'] }} with {{ fractions[1] }}%
+                    {{ fractions[1] }}%
                   </div>
                 </div>
+                <br><div><h6><span class="right">Votes: {{ option3['counts'] }}</span><span class="left">{{ option3['content'] }} :</span></h6></div>
+
                 <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[2] }}%">
-                      {{ option3['content'] }} : {{ option3['counts'] }} with {{ fractions[2] }}%
+                    {{ fractions[2] }}%
                   </div>
                 </div>
                 <br>
                     {% if option4|length > 0 %}
-
+                <div><h6><span class="right">Votes: {{ option4['counts'] }}</span><span class="left">{{ option4['content'] }} :</span></h6></div>
+                <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[3] }}%">
-                      {{ option4['content'] }} : {{ option4['counts'] }} with {{ fractions[3] }}%
+                    {{ fractions[3] }}%
                   </div>
                 </div>
                     <br>
                     {% endif %}
 
                     {% if option5|length > 0 %}
-                        <br>
+                <div><h6><span class="right">Votes: {{ option5['counts'] }}</span><span class="left">{{ option5['content'] }} :</span></h6></div>
+                <br>
                 <div class="progress" style="height: 40px">
                   <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: {{ fractions[4] }}%">
-                      {{ option5['content'] }}  : {{ option5['counts'] }} with {{ fractions[4] }}%
+                    {{ fractions[4] }}%
                   </div>
                 </div>
                     <br>
                     {% endif %}
-
+                <div>
+                    <h6><span class="right">Total Participates: {{ totalvotes }} </span></h6>
+                    <a class="btn btn-outline-info btn-dark-blue" href="{{ url_for("votes.list_my_vote") }}">Back</a>
+                </div>
+                <br>
+                <br>
                 </div>
             <div class="spacer-50"></div>
       </form>
