--- a/webapp/templates/votes.result.html
+++ b/webapp/templates/votes.result.html
@@ -11,7 +11,9 @@
       <div class="spacer-30"></div>
       <div class="content-section">
       <form method="POST" action="{{ url_for('votes.vote_details', vote_id = vote_id, vote_create_time=vote_create_time) }}">
-                <legend class="border-bottom mb-4">{{ topic }}</legend>
+                <legend class="border-bottom mb-4">
+                    <h4>{{ topic }}</h4>
+                </legend>
                 <div class="container bg-white shadow rounded-lg" style="opacity: 0.92">
 
 {#                  <div class="row" style="padding-top: 1.5rem; padding-bottom: 1.5rem">#}
