--- a/webapp/static/styles/main.css
+++ b/webapp/static/styles/main.css
@@ -92,6 +92,7 @@ a.article-title:hover {
 }
 
 body {
+  background-image: url('../images/background.jpg');
   /*background-position: center center;*/
   background-size: cover;
 }
