--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+<!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"> -->
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}">
 
@@ -62,7 +63,7 @@
               </div>
             {% endfor %}
           {% endwith %}
-          {% block content %}{% endblock %}
+          {% block content %}{% endblock %}          
         <div class="spacer-80"></div>
         </div>
       </div>
